fix width on mobile

--- a/src/modules/Diary/DiaryProductsList/diary-product-list.module.css
+++ b/src/modules/Diary/DiaryProductsList/diary-product-list.module.css
@@ -1,4 +1,4 @@
-
+/* 
 .box{
     position: relative;
         height: auto;
@@ -12,7 +12,7 @@
         right: 0;
         height: 45px;
         background-image: linear-gradient(#ffffff82, #ffffffd9, #ffffff);
-}
+} */
 
 
 .list {
@@ -54,7 +54,7 @@
       bottom: 0;
       left: 0;
       right: 0;
-      height: 45px;
+      height: 41px;
       background-image: linear-gradient(#ffffff82, #ffffffd9, #ffffff);
     }
 
